--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
 </head>
 <body>
     <div class="slider-container">
-        
+        <span class="slider-span" id="slider-span"></span>
+        <span class="slider-span" id="slider-span"></span>
+        <span class="slider-span" id="slider-span"></span>
+        <span class="slider-span" id="slider-span"></span>
+        <span class="slider-span" id="slider-span"></span>
+        <span class="slider-span" id="slider-span"></span>
+        <span class="slider-span" id="slider-span"></span>
+        <span class="slider-span" id="slider-span"></span>
+        <span class="slider-span" id="slider-span"></span>
+        <span class="slider-span" id="slider-span"></span>
     </div>
     
 
