--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 </head>
 <body>
     <div class="slider-container">
-        <span class="slider-span" id="slider-span"></span>
-        <span class="slider-span" id="slider-span"></span>
-        <span class="slider-span" id="slider-span"></span>
-        <span class="slider-span" id="slider-span"></span>
-        <span class="slider-span" id="slider-span"></span>
-        <span class="slider-span" id="slider-span"></span>
-        <span class="slider-span" id="slider-span"></span>
-        <span class="slider-span" id="slider-span"></span>
-        <span class="slider-span" id="slider-span"></span>
-        <span class="slider-span" id="slider-span"></span>
+        <span class="slider-span" id="slider-span1"></span>
+        <span class="slider-span" id="slider-span2"></span>
+        <span class="slider-span" id="slider-span3"></span>
+        <span class="slider-span" id="slider-span4"></span>
+        <span class="slider-span" id="slider-span5"></span>
+        <span class="slider-span" id="slider-span6"></span>
+        <span class="slider-span" id="slider-span7"></span>
+        <span class="slider-span" id="slider-span8"></span>
+        <span class="slider-span" id="slider-span9"></span>
+        <span class="slider-span" id="slider-span10"></span>
     </div>
     
 
