--- a/index.html
+++ b/index.html
@@ -22,8 +22,17 @@
 
 
         <div class="image-slider">
+            <div class="slide-div" id="slide-1"></div>
+            <div class="slide-div" id="slide-2"></div>
+            <div class="slide-div" id="slide-3"></div>
+            <div class="slide-div" id="slide-4"></div>
+            <div class="slide-div" id="slide-5"></div>
+            <div class="slide-div" id="slide-6"></div>
+            <div class="slide-div" id="slide-7"></div>
+            <div class="slide-div" id="slide-8"></div>
+            <div class="slide-div" id="slide-9"></div>
+            <div class="slide-div" id="slide-10"></div>
 
-            
         </div>
     </div>
     
