--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
 
 
         <div class="image-slider">
-            <div class="slide-div" id="slide-1"></div>
+            <div class="slide-div" id="slide-1">
+                <img src="images/img1.jpg" alt="" class="img" id="img1">
+                <a href=""></a>
+            </div>
             <div class="slide-div" id="slide-2"></div>
             <div class="slide-div" id="slide-3"></div>
             <div class="slide-div" id="slide-4"></div>
@@ -33,7 +36,7 @@
             <div class="slide-div" id="slide-9"></div>
             <div class="slide-div" id="slide-10"></div>
 
-            
+
 
         </div>
     </div>
