--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="image-slider">
             <div class="slide-div" id="slide-1">
                 <img src="images/img1.jpg" alt="" class="img" id="img1">
-                <a href="#slider-span1" class="button"></a>
+                <a href="#slider-span1" class="button" id="button-1"></a>
             </div>
             <div class="slide-div" id="slide-2"></div>
             <div class="slide-div" id="slide-3"></div>
