--- a/index.html
+++ b/index.html
@@ -24,9 +24,15 @@
         <div class="image-slider">
             <div class="slide-div" id="slide-1">
                 <img src="images/img1.jpg" alt="" class="img" id="img1">
+
                 <a href="#slider-span1" class="button" id="button-1"></a>
+
             </div>
-            <div class="slide-div" id="slide-2"></div>
+            <div class="slide-div" id="slide-2">
+                <img src="images/img2.jpg" alt="" class="img" id="img2">
+                
+                <a href="#slider-span2" class="button" id="button-2"></a>
+            </div>
             <div class="slide-div" id="slide-3"></div>
             <div class="slide-div" id="slide-4"></div>
             <div class="slide-div" id="slide-5"></div>
