--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
                 
                 <a href="#slider-span2" class="button" id="button-2"></a>
             </div>
-            <div class="slide-div" id="slide-3"></div>
+            <div class="slide-div" id="slide-3">
+                <img src="images/img1.jpg" alt="" class="img" id="img1">
+                
+                <a href="#slider-span1" class="button" id="button-1"></a>
+            </div>
             <div class="slide-div" id="slide-4"></div>
             <div class="slide-div" id="slide-5"></div>
             <div class="slide-div" id="slide-6"></div>
