--- a/index.html
+++ b/index.html
@@ -48,7 +48,11 @@
                 
                 <a href="#slider-span1" class="button" id="button-1"></a>
             </div>
-            <div class="slide-div" id="slide-6"></div>
+            <div class="slide-div" id="slide-6">
+                <img src="images/img1.jpg" alt="" class="img" id="img1">
+                
+                <a href="#slider-span1" class="button" id="button-1"></a>
+            </div>
             <div class="slide-div" id="slide-7"></div>
             <div class="slide-div" id="slide-8"></div>
             <div class="slide-div" id="slide-9"></div>
