--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
                 <a href="#slider-span1" class="button" id="button-1"></a>
             </div>
             <div class="slide-div" id="slide-7">
+                <img src="images/img1.jpg" alt="" class="img" id="img1">
                 
+                <a href="#slider-span1" class="button" id="button-1"></a>
             </div>
             <div class="slide-div" id="slide-8"></div>
             <div class="slide-div" id="slide-9"></div>
