--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
                 
                 <a href="#slider-span1" class="button" id="button-1"></a>
             </div>
-            <div class="slide-div" id="slide-8"></div>
+            <div class="slide-div" id="slide-8">
+                
+            </div>
             <div class="slide-div" id="slide-9"></div>
             <div class="slide-div" id="slide-10"></div>
 
