--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
                 <a href="#slider-span1" class="button" id="button-1"></a>
             </div>
             <div class="slide-div" id="slide-8">
+                <img src="images/img1.jpg" alt="" class="img" id="img1">
                 
+                <a href="#slider-span1" class="button" id="button-1"></a>
             </div>
             <div class="slide-div" id="slide-9"></div>
             <div class="slide-div" id="slide-10"></div>
