--- a/index.html
+++ b/index.html
@@ -68,7 +68,11 @@
                 
                 <a href="#slider-span1" class="button" id="button-1"></a>
             </div>
-            <div class="slide-div" id="slide-10"></div>
+            <div class="slide-div" id="slide-10">
+                <img src="images/img1.jpg" alt="" class="img" id="img1">
+                
+                <a href="#slider-span1" class="button" id="button-1"></a>
+            </div>
 
 
 
