--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Image Slider</title>
+    <title>Image-Slider</title>
 </head>
 <body>
     <div class="slider-container">
@@ -24,7 +24,6 @@
         <div class="image-slider">
             <div class="slide-div" id="slide-1">
                 <img src="images/img1.jpg" alt="" class="img" id="img1">
-
                 <a href="#slider-span1" class="button" id="button-1"></a>
 
             </div>
